more cleanup of gulpfile, adding normalize to vendor css

--- a/app/src/static/sass/ui.scss
+++ b/app/src/static/sass/ui.scss
@@ -1,11 +1,5 @@
 /*****************************************************************************
-**		Include Peretz Variables, Mixins, Functions
-*****************************************************************************/
-@import "../../../../bower_components/normalize-css/normalize.css";
-
-
-/*****************************************************************************
-**		Mixins not included in Peretz (vendor.css)
+**		Custom Mixins
 *****************************************************************************/
 @import "mixins/dnd-calc";
 
