add top nav file, move views to new /views directory, add a spell list view

--- a/app/src/static/sass/ui.scss
+++ b/app/src/static/sass/ui.scss
@@ -20,8 +20,8 @@
 /*****************************************************************************
 **		Modules
 *****************************************************************************/
+@import "modules/dnd-ui-top-nav";
 @import "modules/dnd-ui-sideboard";
-
 
 
 /*****************************************************************************
