updating css for page-frame and top-nav

--- a/app/src/components/topNav/topNavView.html
+++ b/app/src/components/topNav/topNavView.html
@@ -1,3 +1,8 @@
 <header class="top-nav-module">
-    <p>top nav</p>
+    <div class="side-nav-toggle">
+        <span>TOG</span>
+    </div>
+    <div class="page-title">
+        <span translate="dndspells.TOP_NAV.HEADER"></span>
+    </div>
 </header>
