--- a/app/src/static/sass/core/_core.scss
+++ b/app/src/static/sass/core/_core.scss
@@ -3,6 +3,10 @@
 **		Core
 **
 *****************************************************************************/
+* {
+    box-sizing: border-box;
+}
+
 html {
     font-size: 100%; // 16px
 }
