--- a/app/src/static/sass/ui.scss
+++ b/app/src/static/sass/ui.scss
@@ -14,12 +14,13 @@
 /*****************************************************************************
 **		Patterns
 *****************************************************************************/
-//
+@import "patterns/dnd-ui-general-module";
 
 
 /*****************************************************************************
 **		Modules
 *****************************************************************************/
+@import "modules/dnd-ui-page-frame";
 @import "modules/dnd-ui-top-nav";
 @import "modules/dnd-ui-sideboard";
 
