--- a/app/src/static/sass/modules/_dnd-ui-top-nav.scss
+++ b/app/src/static/sass/modules/_dnd-ui-top-nav.scss
@@ -4,5 +4,29 @@
 **
 *****************************************************************************/
 .top-nav-module {
-    background: blue;
+    background: $brand-primary;
+    border-bottom: 1px solid $teal-darken-10;
+    height: dnd-calc(40, 16, em);
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+
+    .side-nav-toggle {
+        cursor: pointer;
+        display: inline-block;
+        margin-right: dnd-calc(10, 16, em);
+        padding: dnd-calc(10, 16, em);
+        transition: background .15s ease-in-out;
+
+        &:hover {
+            background: $teal-darken-10;
+        }
+    }
+
+    .page-title {
+        color: $white;
+        display: inline-block;
+        text-shadow: 0 -1px 0 $teal-darken-10;
+    }
 }
