adding a  when users click on top nav toggle, and a  in sidebar to listen to it

--- a/app/src/components/topNav/topNavView.html
+++ b/app/src/components/topNav/topNavView.html
@@ -1,5 +1,5 @@
 <header class="top-nav-module">
-    <div class="side-nav-toggle">
+    <div class="side-nav-toggle" ng-click="vm.toggleSideboard()" ng-class="{'active': vm.isToggleOpen}">
         <span>TOG</span>
     </div>
     <div class="page-title">
