adding a dashboard state and view, updating sidebar template and styles

--- a/app/src/components/sideboard/sideboardView.html
+++ b/app/src/components/sideboard/sideboardView.html
@@ -1,3 +1,19 @@
-<div class="sideboard" ng-class="{'active': vm.isSideboardOpen}">
-    <p>sideboard</p>
+<div class="sideboard general-module" ng-class="{'active': vm.isSideboardOpen}">
+    <div class="mod-header-wrapper">
+        <div class="mod-header">
+            <h4 translate="dndspells.SIDEBOARD.VIEW.HEADER"></h4>
+        </div>
+    </div>
+    <div class="mod-body-wrapper">
+        <div class="mod-body">
+            <ul class="sidebar-nav">
+                <li class="sidebar-nav-item">
+                    <span translate="dndspells.SIDEBOARD.VIEW.DASHBOARD"></span>
+                </li>
+                <li class="sidebar-nav-item">
+                    <span translate="dndspells.SIDEBOARD.VIEW.SPELLS"></span>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
