--- a/app/src/static/sass/patterns/_dnd-ui-general-module.scss
+++ b/app/src/static/sass/patterns/_dnd-ui-general-module.scss
@@ -5,4 +5,12 @@
 *****************************************************************************/
 .general-module {
     position: relative;
+
+    .mod-header {
+        padding: dnd-calc(10, 16, em) dnd-calc(20, 16, em);
+    }
+
+    .mod-body {
+        padding: dnd-calc(10, 16, em) dnd-calc(20, 16, em);
+    }
 }
