updates to sideboard and top nav

--- a/app/src/components/topNav/topNavView.html
+++ b/app/src/components/topNav/topNavView.html
@@ -3,6 +3,6 @@
         <span>TOG</span>
     </div>
     <div class="page-title">
-        <span translate="dndspells.TOP_NAV.HEADER"></span>
+        <a ui-sref="home" translate="dndspells.TOP_NAV.HEADER"></a>
     </div>
 </header>
