--- a/app/src/components/sideboard/sideboardView.html
+++ b/app/src/components/sideboard/sideboardView.html
@@ -7,11 +7,11 @@
     <div class="mod-body-wrapper">
         <div class="mod-body">
             <ul class="sidebar-nav">
-                <li class="sidebar-nav-item">
+                <li class="sidebar-nav-item" ng-class="{'active': vm.stateDetails.name === 'dashboard'}" ng-click="vm.navigate('dashboard')">
                     <span translate="dndspells.SIDEBOARD.VIEW.DASHBOARD"></span>
                 </li>
-                <li class="sidebar-nav-item">
-                    <span translate="dndspells.SIDEBOARD.VIEW.SPELLS"></span>
+                <li class="sidebar-nav-item" ng-class="{'active': vm.stateDetails.name === 'spells'}" ng-click="vm.navigate('spells')">
+                    <span translate="dndspells.SIDEBOARD.VIEW.SPELL_LIST"></span>
                 </li>
             </ul>
         </div>
