--- a/app/src/static/sass/patterns/_dnd-ui-general-module.scss
+++ b/app/src/static/sass/patterns/_dnd-ui-general-module.scss
@@ -13,4 +13,9 @@
     .mod-body {
         padding: dnd-calc(10, 16, em) dnd-calc(20, 16, em);
     }
+
+    .limited-container {
+        margin: 0 auto;
+        max-width: dnd-calc(400, 16, em);
+    }
 }
