--- a/app/src/static/sass/ui.scss
+++ b/app/src/static/sass/ui.scss
@@ -14,6 +14,7 @@
 /*****************************************************************************
 **		Patterns
 *****************************************************************************/
+@import "patterns/dnd-ui-forms";
 @import "patterns/dnd-ui-general-module";
 
 
@@ -23,6 +24,7 @@
 @import "modules/dnd-ui-page-frame";
 @import "modules/dnd-ui-top-nav";
 @import "modules/dnd-ui-sideboard";
+@import "modules/dnd-ui-login-module";
 
 
 /*****************************************************************************
