--- a/app/src/views/home/homeView.html
+++ b/app/src/views/home/homeView.html
@@ -1,5 +1,7 @@
-<div>
-    <p>homeView.html</p>
-    <p translate="dndspells.TITLE"></p>
-    <a ui-sref="spells">Spell List</a>
+<div class="home-module general-module">
+    <div class="mod-body-wrapper">
+        <div class="mod-body limited-container">
+            <dnd-login-form></dnd-login-form>
+        </div>
+    </div>
 </div>
