--- a/app/src/static/sass/core/_core.scss
+++ b/app/src/static/sass/core/_core.scss
@@ -66,3 +66,11 @@ ul {
     margin: 0;
     padding: 0;
 }
+
+
+/*****************************************************************************
+**		Other
+*****************************************************************************/
+.centered {
+    text-align: center;
+}
