creating a signup form (directive, controller, view), creating a UserService

--- a/app/src/views/home/homeView.html
+++ b/app/src/views/home/homeView.html
@@ -3,5 +3,8 @@
         <div class="mod-body limited-container">
             <dnd-login-form></dnd-login-form>
         </div>
+        <div class="mod-body limited-container">
+            <dnd-signup-form></dnd-signup-form>
+        </div>
     </div>
 </div>
