--- a/app/src/views/dashboard/dashboardView.html
+++ b/app/src/views/dashboard/dashboardView.html
@@ -1,4 +1,7 @@
 <div class="dashboard">
     <p>dashboard view</p>
+    <br /><br />
+    <p ng-click="vm.checkUserLogin()">check user login</p>
+    <br /><br />
     <p ng-click="vm.logout()">logout</p>
 </div>
