--- a/app/src/components/sideboard/sideboardView.html
+++ b/app/src/components/sideboard/sideboardView.html
@@ -7,7 +7,8 @@
     <div class="mod-body-wrapper">
         <div class="mod-body">
             <ul class="sidebar-nav">
-                <li class="sidebar-nav-item" ng-class="{'active': vm.stateDetails.name === 'dashboard'}" ng-click="vm.navigate('dashboard')">
+                <li class="sidebar-nav-item" ng-class="{'active': vm.stateDetails.name === 'dashboard'}"
+                    ng-if="vm.userData.loggedin" ng-click="vm.navigate('dashboard')">
                     <span translate="dndspells.SIDEBOARD.VIEW.DASHBOARD"></span>
                 </li>
                 <li class="sidebar-nav-item" ng-class="{'active': vm.stateDetails.name === 'spells'}" ng-click="vm.navigate('spells')">
