--- a/app/src/static/sass/modules/_dnd-ui-sideboard.scss
+++ b/app/src/static/sass/modules/_dnd-ui-sideboard.scss
@@ -50,7 +50,7 @@
             background: lighten($black, 97%);
             border-left-color: $brand-primary;
             color: $brand-primary;
-            cursor: auto;
+            cursor: default;
             font-weight: bold;
         }
 
