--- a/app/src/static/sass/core/_variables.scss
+++ b/app/src/static/sass/core/_variables.scss
@@ -18,7 +18,9 @@ $black-lighten-90: lighten($black, 90%);
 
 // Generic Colors
 $white: #fff;
+$gray: #e1e1e1;
 
 
 // Brand Colors
 $brand-primary: $teal;
+$error: #e73333;
