--- a/app/src/static/sass/patterns/_dnd-ui-forms.scss
+++ b/app/src/static/sass/patterns/_dnd-ui-forms.scss
@@ -5,9 +5,33 @@
 *****************************************************************************/
 form {
 
+    li {
+        padding-bottom: dnd-calc(10, 16, em);
+
+        &:last-child {
+            padding: 0;
+        }
+    }
+
+    .form-errors {
+        padding: dnd-calc(10, 16, em) 0;
+    }
+
+    .error {
+        color: $error;
+        font-size: dnd-calc(12, 16, em);
+        font-weight: bold;
+    }
 }
 
-input {
+input[type="text"], input[type="password"], input[type="email"] {
+    border: 1px solid $gray;
     display: block;
+    font-size: dnd-calc(18, 16, em);
+    padding: dnd-calc(12, 18, em);
     width: 100%;
+
+    &.ng-touched.ng-invalid {
+        border-color: $error;
+    }
 }
