--- a/app/src/static/sass/ui.scss
+++ b/app/src/static/sass/ui.scss
@@ -15,6 +15,7 @@
 **		Patterns
 *****************************************************************************/
 @import "patterns/dnd-ui-forms";
+@import "patterns/dnd-ui-buttons";
 @import "patterns/dnd-ui-general-module";
 
 
