--- a/app/src/components/user-login/loginView.html
+++ b/app/src/components/user-login/loginView.html
@@ -4,19 +4,20 @@
         <ul>
             <li>
                 <input type="email" placeholder="Email" name="email" ng-model="vm.loginData.userEmail"
-                       required ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 500, 'blur': 0 } }"
+                       required ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 250, 'blur': 0 } }"
                        ng-class="{'ng-invalid': vm.loginData.loginError}" ng-focus="vm.loginData.loginError=false" />
-                <div class="form-errors" ng-if="loginForm.email.$invalid && loginForm.email.$touched">
-                    <p class="error" ng-if="loginForm.email.$error.required && loginForm.email.$touched" translate="dndspells.LOGIN_FORM.ERROR_EMAIL_REQUIRED"></p>
-                    <p class="error" ng-if="loginForm.email.$error.email && loginForm.email.$touched" translate="dndspells.LOGIN_FORM.ERROR_EMAIL_INVALID"></p>
+                <div class="form-errors" ng-if="loginForm.email.$invalid && loginForm.email.$dirty">
+                    <p class="error" ng-if="loginForm.email.$error.required && loginForm.email.$dirty" translate="dndspells.LOGIN_FORM.ERROR_EMAIL_REQUIRED"></p>
+                    <p class="error" ng-if="loginForm.email.$error.email && loginForm.email.$dirty" translate="dndspells.LOGIN_FORM.ERROR_EMAIL_INVALID"></p>
                 </div>
             </li>
             <li>
                 <input type="password" placeholder="Password" name="password" ng-model="vm.loginData.userPassword"
-                       required ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 500, 'blur': 0 } }"
-                       ng-class="{'ng-invalid': vm.loginData.loginError}" ng-focus="vm.loginData.loginError=false" />
-                <div class="form-errors" ng-if="loginForm.password.$invalid && loginForm.password.$touched">
-                    <p class="error" ng-show="loginForm.password.$error.required && loginForm.password.$touched" translate="dndspells.LOGIN_FORM.ERROR_PASSWORD_REQUIRED"></p>
+                       required ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 250, 'blur': 0 } }"
+                       ng-class="{'ng-invalid': vm.loginData.loginError}" ng-focus="vm.loginData.loginError=false"
+                       ng-keyup="$event.keyCode == 13 && vm.login()"/>
+                <div class="form-errors" ng-if="loginForm.password.$invalid && loginForm.password.$dirty">
+                    <p class="error" ng-show="loginForm.password.$error.required && loginForm.password.$dirty" translate="dndspells.LOGIN_FORM.ERROR_PASSWORD_REQUIRED"></p>
                 </div>
             </li>
             <li>
