--- a/app/src/static/sass/core/_variables.scss
+++ b/app/src/static/sass/core/_variables.scss
@@ -24,3 +24,8 @@ $gray: #e1e1e1;
 // Brand Colors
 $brand-primary: $teal;
 $error: #e73333;
+
+
+// Other
+$sideboard-padding-small: 100;
+$sideboard-padding-medium: 320;
