--- a/app/src/components/topNav/topNavView.html
+++ b/app/src/components/topNav/topNavView.html
@@ -2,7 +2,7 @@
     <div class="side-nav-toggle" ng-click="vm.toggleSideboard()" ng-class="{'active': vm.isToggleOpen}">
         <span>TOG</span>
     </div>
-    <div class="page-title">
-        <a ui-sref="home" translate="dndspells.TOP_NAV.HEADER"></a>
+    <div class="page-title"  ng-click="vm.navigate()">
+        <span translate="dndspells.TOP_NAV.HEADER"></span>
     </div>
 </header>
