--- a/app/src/static/sass/modules/_dnd-ui-sideboard.scss
+++ b/app/src/static/sass/modules/_dnd-ui-sideboard.scss
@@ -7,13 +7,18 @@
     background: $white;
     bottom: 0;
     box-shadow: 0 0 20px rgba($black, .5);
-    left: dnd-calc(-410, 16, em);
+    left: dnd-calc(-($sideboard-padding-small + 10), 100, %);
     padding-top: dnd-calc(40, 16, em);
     position: fixed;
     top: 0;
     transition: left .15s ease-in-out;
-    width: dnd-calc(400, 16, em);
+    width: dnd-calc($sideboard-padding-small, 100, %);
     z-index: 500;
+
+    @media screen and ( min-width: 640px ) {
+        left: dnd-calc(-($sideboard-padding-medium + 10), 16, em);
+        width: dnd-calc($sideboard-padding-medium, 16, em);
+    }
 
     &.active {
         left: 0;
