--- a/app/src/static/sass/ui.scss
+++ b/app/src/static/sass/ui.scss
@@ -26,6 +26,7 @@
 @import "modules/dnd-ui-top-nav";
 @import "modules/dnd-ui-sideboard";
 @import "modules/dnd-ui-login-module";
+@import "modules/dnd-ui-spell-list-module";
 
 
 /*****************************************************************************
