--- a/app/src/static/sass/ui.scss
+++ b/app/src/static/sass/ui.scss
@@ -17,6 +17,7 @@
 @import "patterns/dnd-ui-forms";
 @import "patterns/dnd-ui-buttons";
 @import "patterns/dnd-ui-general-module";
+@import "patterns/dnd-ui-option-dropdown";
 
 
 /*****************************************************************************
