--- a/app/src/static/sass/modules/_dnd-ui-spell-list-module.scss
+++ b/app/src/static/sass/modules/_dnd-ui-spell-list-module.scss
@@ -6,8 +6,32 @@
 .spell-list-module {
 
     .mod-body {
-        padding-top: 0;
+
     }
+
+
+    /*
+     * Filters section
+     */
+    .spell-list-filters {
+        padding-bottom: dnd-calc(20, 16, em);
+
+        .spell-list-filter {
+            display: inline-block;
+            padding: 0 dnd-calc(10, 16, em);
+            vertical-align: top;
+            width: dnd-calc(2, 6, %);
+        }
+
+        .level-filter {
+            padding-left: 0;
+        }
+
+        .class-filter {
+            padding-right: 0;
+        }
+    }
+
 
     .spell-list {
 
