--- a/app/src/static/sass/patterns/_dnd-ui-general-module.scss
+++ b/app/src/static/sass/patterns/_dnd-ui-general-module.scss
@@ -7,7 +7,7 @@
     position: relative;
 
     .mod-header {
-        padding: dnd-calc(10, 16, em) dnd-calc(20, 16, em);
+        padding: dnd-calc(20, 16, em) dnd-calc(20, 16, em) dnd-calc(10, 16, em) dnd-calc(20, 16, em);
     }
 
     .mod-body {
