setting up spellbook create and view states, adding states to sideboard, fixing html5 mode to work properly with child states

--- a/app/src/components/spellList/spellListView.html
+++ b/app/src/components/spellList/spellListView.html
@@ -1,7 +1,7 @@
 <div class="spell-list-module general-module">
     <div class="mod-header-wrapper">
         <div class="mod-header">
-            <p translate="dndspells.SPELL_LIST.HEADER"></p>
+            <h4 translate="dndspells.SPELL_LIST.HEADER"></h4>
         </div>
     </div>
     <div class="mod-body-wrapper">
